// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Visualize: https://dbdiagram.io

Project under_pressure {
  database_type: 'PostgreSQL'
}

Table "users" {
  id integer [increment, primary key]
  given_name varchar(255)
  google_sub integer
}

Table subjects {
  id integer [primary key]
  name varchar(255)
}

Table subject_instances {
  id integer [primary key]
  user_id integer [ref: > users.id]
  subject_id integer [ref: > subjects.id]
}

Table entries {
  id integer [increment, primary key]
  subject_instance_id integer
  creation_date date
  stress_level integer [ note: '0-100' ]
}